[gd_scene load_steps=12 format=3 uid="uid://brnmcbbj1vas5"]

[ext_resource type="FontFile" uid="uid://bbkp7g4md08hy" path="res://mats/font/Puzzle-Tale-Pixel-Regular.ttf" id="1_tdd5o"]
[ext_resource type="Script" path="res://mats/UI/map/map.gd" id="2_65g8f"]
[ext_resource type="Texture2D" uid="uid://b67xymnebnqc5" path="res://mats/UI/imgs/stats.png" id="3_omh8n"]
[ext_resource type="PackedScene" uid="uid://d1q3jqx7pbb7t" path="res://mats/UI/map/elems.tscn" id="4_t6e7s"]
[ext_resource type="Texture2D" uid="uid://btuulcxcyw3im" path="res://mats/imgs/warrior/money.png" id="5_mnsh2"]
[ext_resource type="Texture2D" uid="uid://f220t7uqarsa" path="res://mats/UI/imgs/panel.png" id="6_dgsvi"]
[ext_resource type="Texture2D" uid="uid://ck4m06sahhdya" path="res://mats/imgs/icons/X.png" id="7_76pyu"]

[sub_resource type="FontVariation" id="FontVariation_cajka"]
base_font = ExtResource("1_tdd5o")
spacing_top = 4

[sub_resource type="Theme" id="Theme_tp2ss"]
default_font = SubResource("FontVariation_cajka")

[sub_resource type="FontVariation" id="FontVariation_npmpf"]
base_font = ExtResource("1_tdd5o")
spacing_top = 2

[sub_resource type="Theme" id="Theme_7km3u"]
default_font = SubResource("FontVariation_npmpf")

[node name="map" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_tp2ss")
script = ExtResource("2_65g8f")
colums = 5
boss_spawn_ids = Array[int]([4])
shop_count = 1
start_posid = 0

[node name="stats2" type="Sprite2D" parent="."]
visible = false
position = Vector2(8, 4)
scale = Vector2(2, 2)
texture = ExtResource("3_omh8n")
centered = false

[node name="cont" type="RichTextLabel" parent="stats2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 30.0
offset_right = 80.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="gc" type="VBoxContainer" parent="stats2/cont"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="vs" type="VSlider" parent="stats2/cont"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.05

[node name="hero_values" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 122.0
offset_bottom = -270.0
grow_vertical = 2
metadata/_edit_group_ = true

[node name="cont" type="VBoxContainer" parent="hero_values"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -10.0
offset_right = -2.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="money" parent="hero_values/cont" instance=ExtResource("4_t6e7s")]
layout_mode = 2
theme = SubResource("Theme_7km3u")
img = ExtResource("5_mnsh2")
show_popup_text = true
popup_text = "MONEY"

[node name="xp" type="Control" parent="hero_values/cont"]
visible = false
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="pg" type="ProgressBar" parent="hero_values/cont/xp"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 52.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
value = 50.0
show_percentage = false

[node name="txt" type="RichTextLabel" parent="hero_values/cont/xp/pg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 32.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="stats" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 52.0
offset_right = 122.0
offset_bottom = -2.0
grow_vertical = 2
metadata/_edit_group_ = true

[node name="cont" type="RichTextLabel" parent="stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="vs" type="VSlider" parent="stats/cont"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
max_value = 1.0
step = 0.05

[node name="gc" type="GridContainer" parent="stats/cont"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2

[node name="arenas" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 2.0
offset_right = 124.0
offset_bottom = 2.0
scale = Vector2(2, 2)
texture = ExtResource("6_dgsvi")

[node name="gc" type="GridContainer" parent="arenas"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 244.0
scale = Vector2(0.5, 0.5)

[node name="shop" type="GridContainer" parent="arenas"]
visible = false
layout_mode = 0
offset_left = 7.0
offset_top = 9.0
offset_right = 250.0
offset_bottom = 128.0
theme_override_constants/h_separation = 1
columns = 4

[node name="hc" type="HFlowContainer" parent="arenas"]
layout_mode = 0
offset_left = 33.0
offset_top = 137.0
offset_right = 234.0
offset_bottom = 149.0

[node name="shop_button" type="Button" parent="arenas"]
visible = false
layout_mode = 0
offset_left = 12.0
offset_top = 135.0
offset_right = 31.0
offset_bottom = 151.0
icon = ExtResource("7_76pyu")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="in_shop" from="." to="." method="_on_in_shop"]
[connection signal="value_changed" from="stats2/cont/vs" to="." method="_on_stat_vs_value_changed"]
[connection signal="value_changed" from="stats/cont/vs" to="." method="_on_vs_value_changed"]
[connection signal="button_down" from="arenas/shop_button" to="." method="_on_shop_exit_down"]
